--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./style/style.css">
-    <script defer src="./script/main.js"></script>
 </head>
 <body>
-    
+    <!-- <div>
+        <h1>text:</h1>
+        <p id="result"></p>
+        <button id="btn">Click</button>
+    </div> -->
+    <script  src="./script/main.js"></script>
 </body>
 </html>
