--- a/demo/index.html
+++ b/demo/index.html
@@ -7,9 +7,13 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./style/style.css">
-    <script defer src="./script/main.js"></script>
-</head>
+ </head>
 <body>
-    
+    <h1>Приклад: </h1>
+
+
+      <script  src="./script/class/panel.js"></script>
+    <script  src="./script/main.js"></script>
+<h4>Copyriting: &copy;</h4>
 </body>
 </html>
