--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./style/style.css">
-    <script defer src="./script/main.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     
+
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
