--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Галерея зображень на jQuery</title>
+    <link rel="shortcut icon" href="./assets/icons/logo.png" type="image/x-icon">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
-    
 
+<body>
+    <header>
+<h1>Галерея зображень на jQuery</h1>
+   <hr> </header>
+    <main>
+<div class="row">
+    <div class="col-md-3">
+<section>
+    <nav>
+        <img class="nav-img" src="./assets/logo/cat-logo.png" alt="cat logo">
+        <img class="nav-img" src="./assets/logo/dog-logo.png" alt="dog logo">
+        <img class="nav-img" src="./assets/logo/fish-logo.png" alt="fish logo">
+    </nav>
+    <div id="gallery">
+        <!-- mini-gallery placeholder -->
+        
+    </div>
+</section>
+    </div>
+    <div class="col-md-9">
+        <section>
+            <img id="logo-img" src="./assets/logo/default.jpg" alt="...">
+        </section>
+    </div>
+</div>
+    </main>
+    <footer>
+<hr>
+<h6>Copyright: &copy; IT-Academy STEP&trade; - Kyiv, 2023</h6>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="./assets/js/mylib.js"></script>
     <script src="./assets/js/main.js"></script>
+
 </body>
+
 </html>
