--- a/index.html
+++ b/index.html
@@ -15,33 +15,34 @@
 
 <body>
     <header>
-<h1>Галерея зображень на jQuery</h1>
-   <hr> </header>
+        <h1>Галерея зображень на jQuery</h1>
+        <hr>
+    </header>
     <main>
-<div class="row">
-    <div class="col-md-3">
-<section>
-    <nav>
-        <img class="nav-img" src="./assets/logo/cat-logo.png" alt="cat logo">
-        <img class="nav-img" src="./assets/logo/dog-logo.png" alt="dog logo">
-        <img class="nav-img" src="./assets/logo/fish-logo.png" alt="fish logo">
-    </nav>
-    <div id="gallery">
-        <!-- mini-gallery placeholder -->
-        
-    </div>
-</section>
-    </div>
-    <div class="col-md-9">
-        <section>
-            <img id="logo-img" src="./assets/logo/default.jpg" alt="...">
-        </section>
-    </div>
-</div>
+        <div class="row">
+            <div class="col-md-3">
+                <section>
+                    <nav>
+                        <img class="nav-img" src="./assets/logo/cat-logo.png" alt="cat logo">
+                        <img class="nav-img" src="./assets/logo/dog-logo.png" alt="dog logo">
+                        <img class="nav-img" src="./assets/logo/fish-logo.png" alt="fish logo">
+                    </nav>
+                    <div id="gallery">
+                        <!-- mini-gallery placeholder -->
+
+                    </div>
+                </section>
+            </div>
+            <div class="col-md-9">
+                <section>
+                    <img id="logo-img" src="./assets/logo/default.jpg" alt="...">
+                </section>
+            </div>
+        </div>
     </main>
     <footer>
-<hr>
-<h6>Copyright: &copy; IT-Academy STEP&trade; - Kyiv, 2023</h6>
+        <hr>
+        <h6>Copyright: &copy; IT-Academy STEP&trade; - Kyiv, 2023</h6>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
