--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <img class="nav-img" src="./assets/logo/fish-logo.png" alt="fish logo">
                     </nav>
                     <div id="gallery">
+                        <!-- <img id="back" src="./assets/icons/left_arrow.png" alt="arrow"> -->
                         <!-- mini-gallery placeholder -->
 
                     </div>
