--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link rel="stylesheet" href="./style/style.css">
-    <script defer src="./script/main.js"></script>
+    <title>Слайдер на JQuery</title>
+    <link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Слайдер на JQuery</h1>
+    </header>
+    <nav>
+        <hr>
+        <section>
+            <img id="left-arrow" class="arrow" src="" alt="...">
+            <progress max="10" value="0"></progress>
+            <img id="right-arrow" class="arrow" src="" alt="...">
+            <div style="height: 10px"></div>
+            </div>
+        </section>
+        <hr>
+    </nav>
+    <main>
+        <div id="slider">
+            <!-- slider images placeholder -->
+        </div>
+    </main>
+    <footer>
+        <hr>
+        <h4>Copyright: &copy; Company: &trade; 2023</h4>
+    </footer>
+
+    <!-- js -->
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="./assets/js/mylib.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
