--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav>
         <hr>
         <section>
-            <img id="left-arrow" class="arrow" src="" alt="...">
+            <img id="left-arrow" class="arrow" src="./assets/img/arrow1.png" alt="...">
             <progress max="10" value="0"></progress>
-            <img id="right-arrow" class="arrow" src="" alt="...">
+            <img id="right-arrow" class="arrow" src="./assets/img/arrow2.png" alt="...">
             <div style="height: 10px"></div>
             </div>
         </section>
@@ -36,7 +36,9 @@
     </footer>
 
     <!-- js -->
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="./assets/js/manager.js"></script>
     <script src="./assets/js/mylib.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
