--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <nav>
         <hr>
         <section>
+            <img id="play-button" class="arrow" src="./assets/img/play.png" alt="...">
             <img id="left-arrow" class="arrow" src="./assets/img/arrow1.png" alt="...">
             <progress max="10" value="0"></progress>
             <img id="right-arrow" class="arrow" src="./assets/img/arrow2.png" alt="...">
+            <img id="stop-button" class="arrow" src="./assets/img/stop.png" alt="...">
             <div style="height: 10px"></div>
             </div>
         </section>
