--- a/index.html
+++ b/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Редактор діаграм</title>
+
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Редактор діаграм</h1>
+        <hr>
+    </header>
+    <main>
+        <div class="row">
+            <div class="col-md-4">
+                <section id="data-view">
+                    <h5>Перегляд даних</h5>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Величина</th>
+                                <th>Значення</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- data placeholder -->
+                        </tbody>
+                    </table>
+                </section>
+                <section id="data-control">
+                    <h5>Управління даними</h5>
+                    <hr>
+                    <button id="load-btn" class="btn btn-sm btn-secondary">Завантажити дані</button>
+                    <button id="reset-btn" class="btn btn-sm btn-secondary">Очистити дані</button>
+                    <button id="rect-btn" class="btn btn-sm btn-secondary">Сточаста діаграма</button>
+                    <button id="circle-btn" class="btn btn-sm btn-secondary">Колова діаграма</button>
+                </section>
+            </div>
+            <div class="col-md-8">
+                <section id="diagram-view">
+                    <h5>Перегляд діаграму</h5>
+                    <hr>
+                    <div id="view-panel">
+                        <canvas id="canvas" width="700" height="450">
+                            Ваш браузер не підтримую технологію Canvas!
+                        </canvas>
+                        <div style="display: none;">
+                            <img id="logp" src="./assets/img/logo.png" alt="...">
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <hr>
+        <h6>
+            Copyright: &copy; Company&trade; - City, 2023
+        </h6>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script type="module" src="./assets/js/controller.js"></script>
+    <script type="module" src="./assets/js/main.js"></script>
 </body>
+
 </html>
