--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             Ваш браузер не підтримую технологію Canvas!
                         </canvas>
                         <div style="display: none;">
-                            <img id="logp" src="./assets/img/logo.png" alt="...">
+                            <img id="logo" src="./assets/img/logo.png" alt="...">
                         </div>
                     </div>
                 </section>
@@ -72,6 +72,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js"
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script type="module" src="./assets/js/drawer.js"></script>
     <script type="module" src="./assets/js/controller.js"></script>
     <script type="module" src="./assets/js/main.js"></script>
 </body>
