--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Погодний інформер</title>
+
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/main.css">
+
 </head>
+
 <body>
-    
+    <header>
+        <h1>Погодний інформер</h1>
+        <hr>
+    </header>
+    <main>
+        <section id="data">
+            <fieldset>
+                <legend>
+                    Вибір міста для отримання інформації про погоду
+                </legend>
+                <p>
+                    <label for="city">Місто:</label>
+                    <input type="text" id="city" placeholder="Введіть назву міста для пошуку...">
+                </p>
+                <p>
+                    <button id="get-weather">Отримати погоду</button>
+                    <button id="res-weather">Скинути погоду</button>
+                </p>
+            </fieldset>
+            <fieldset>
+                <legend>
+                    Перегляд інформації про природу у заданому місті
+                </legend>
+                <div id="display">
+                    <!--  -->
+                </div>
+            </fieldset>
+        </section>
+    </main>
+    <footer>
+        <hr>
+        <h4>Copyright: &copy; Company&trade; - City, 2023</h4>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script type="module" src="./scripts/weather_model.js"></script>
+    <script type="module" src="./scripts/visualizer.js"></script>
+    <script type="module" src="./scripts/controller.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
+
 </html>
