--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <legend>
                     Перегляд інформації про природу у заданому місті
                 </legend>
+                <section id="time_buttons">
+                    <button id="weather_today">Зараз</button>
+                    <button id="weather_tomorrow">Завтра</button>
+                </section>
                 <div id="display">
                     <!--  -->
                 </div>
