--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Робота із кукі-файлами у JS</title>
+
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
+
 <body>
-    
+    <div id="main-box">
+        <h1>Базові операції із кукі-файлами</h3>
+            <hr>
+            <fieldset id="fs-1">
+                <legend>Введення даних</legend>
+                <div class="group-box">
+                    <label for="key">Ключ:</label><br>
+                    <input type="text" id="key">
+                </div>
+                &nbsp;
+                <div class="group-box">
+                    <label for="val">Значення:</label><br>
+                    <input type="text" id="val">
+                </div>
+                &nbsp;
+                <div class="group-box">
+                    <label for="expire">Термін(днів):</label><br>
+                    <input type="number" id="exp" min="0" max="365" value="0">
+                </div>
+            </fieldset>
+            <fieldset id="fs-2">
+                <legend>Управління операціями</legend>
+                <button id="b1">Створити</button>
+                <button id="b2">Показати</button>
+                <button id="b3">Знайти</button>
+                <button id="b4">Змінити</button>
+                <button id="b5">Видалити</button>
+                <button id="b6">Очистити</button>
+            </fieldset>
+            <fieldset id="fs-3">
+                <legend>Перегляд результатів</legend>
+                <table id="res" border="1">
+                    <thead>
+                        <tr>
+                            <th>Ключ</th>
+                            <th>Значення</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- placeholder -->
+                    </tbody>
+                </table>
+            </fieldset>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script type="module" src="./scripts/services/cookies_manager.js"></script>
+    <script type="module" src="./scripts/services/validatior.js"></script>
+    <script type="module" src="./scripts/services/controller.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
+
 </html>
