--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1>Todo list</h1>
+
+        <form class="add-todo" name="addTodo">
+            <label class="add-todo__input">
+                <input type="text" name="addTodoInput">
+            </label>
+            <button class="add-todo__btn" name="addTodoBtn">Add todo</button>
+        </form>
+        
+        <div class="todos-block">
+            <ul class="todo-list">
+                <!-- <li class="todo-item">
+                    <label for="todo-item__input">
+                        <input type="checkbox" name="completed">
+                    </label>
+                    <p class="todo-item__text">Todo 1</p>
+                <button class="action-btn_del">X</button>
+                </li> -->
+            </ul>
+        </div>
+    </div>
+
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
