--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <h1>Todo list</h1>
 
         <form class="add-todo" name="addTodoForm">
+            <label class="check-box-container">
+                <input type="checkbox" name="notcompletedtodown" id="checkBox1">
+            </label>
             <label class="add-todo__input">
                 <input type="text" name="addTodoInput">
             </label>
