--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <form class="add-todo" name="addTodoForm">
             <label class="check-box-container">
                 <input type="checkbox" name="notcompletedtodown" id="checkBox1">
+                <input type="checkbox" name="onlycompleted" id="checkBox2">
             </label>
             <label class="add-todo__input">
                 <input type="text" name="addTodoInput">
