--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Todo list</title>
+
+
+    <link rel="stylesheet" href="./css/main.css">
+
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <h1>SHOP</h1>
+    </div>
+
+    <div class="container">
+        <div class="select-container">
+            <!--  -->
+        </div>
+        <div class="shop-container">
+            <!--  -->
+            
+        </div>
+    </div>
+
+    <script src="./js/modules.js"></script>
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
