--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div class="container">
         <h1>SHOP</h1>
+        <button class="basket">show basket</button>
     </div>
 
     <div class="container">
