--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 
     <div class="container">
         <h1>SHOP</h1>
-        <button class="basket">show basket</button>
+    </div>
+
+    <div class="basket">
+        <button class="basket-btn">show basket</button>
+        
+        <div class="basket-container">
+            <!--  -->
+        </div>
     </div>
 
     <div class="container">
@@ -26,7 +33,7 @@
         </div>
         <div class="shop-container">
             <!--  -->
-            
+
         </div>
     </div>
 
